--- a/src/Styles/fonts.scss
+++ b/src/Styles/fonts.scss
@@ -1,10 +1,11 @@
 @import "./variables.scss";
 // Font Styles
 h1, h2, h3, h4, h5, h6 {
-  color:#202020;
-  font-family: $headerFont;
-  font-weight: 700;
+  color:$cyberBlue;
+  font-family: $cyberFont;
+  font-weight:600;
   margin-top:0px;
+  text-transform: uppercase;
 }
 
 h1 {
@@ -32,7 +33,7 @@ h6 {
 }
 
 p {
-  color:#202020;
+  color: $darkBlue;
   font-family: $paraFont;
   font-size:12px;
   line-height:14px;
