--- a/src/Components/Molecules/DailyList/index.scss
+++ b/src/Components/Molecules/DailyList/index.scss
@@ -2,11 +2,15 @@
 @import '../../../Styles/fonts.scss';
 
 li {
+  position:relative;
   border: 1px solid $cyberBlue;
   margin: 0 2.5px;
+  background-color:#000;
+  padding:0px 5px 5px 5px;
 
   h3 {
     text-align:center;
+    margin-bottom: 5px;
   }
   p {
     text-align:center;
