--- a/src/Components/Organisms/futureWeather/index.scss
+++ b/src/Components/Organisms/futureWeather/index.scss
@@ -5,6 +5,8 @@
   ul {
     padding-left: 0px;
     margin: 5px 0px;
+    display:grid;
+    grid-template-columns: repeat(8, 1fr);
   }
 
   li:first-child {
