Finished responsive rework

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,27 +15,27 @@ background-color:#000;
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
   .weatherAppWrap {
-    width:500px;
+    max-width:500px;
   }
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
   .weatherAppWrap {
-    width:600px;
+    max-width:600px;
   }
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
   .weatherAppWrap {
-    width:800px;
+    max-width:800px;
   }
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
   .weatherAppWrap {
-    width:800px;
+    max-width:800px;
   }
 }
