--- a/src/App.scss
+++ b/src/App.scss
@@ -4,38 +4,37 @@
 body {
 background-color:#000;
 
-  .weatherAppWrap {
+  .weatherAppWrap, header, .loadingWrap {
     width:98%;
     height: auto;
     margin: 0 auto;
-
   }
 }
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-  .weatherAppWrap {
+  .weatherAppWrap, header, .loadingWrap {
     max-width:500px;
   }
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-  .weatherAppWrap {
+  .weatherAppWrap, header, .loadingWrap {
     max-width:600px;
   }
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-  .weatherAppWrap {
+  .weatherAppWrap, header, .loadingWrap {
     max-width:800px;
   }
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-  .weatherAppWrap {
+  .weatherAppWrap, header, .loadingWrap {
     max-width:800px;
   }
 }
