Cleaned up excess/duplicate CSS files

--- a/src/Components/Atoms/LabelTime/styles.scss
+++ b/src/Components/Atoms/LabelTime/styles.scss
@@ -1,7 +1,7 @@
-@import '../../../Styles/variables.scss';
-@import '../../../Styles/fonts.scss';
+@import 'Styles/variables.scss';
+@import 'Styles/fonts.scss';
 
-.weatherLabel {
+.timeLabel {
   font-size:16px;
 
   span {
