--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 @import './Styles/fonts.scss';
 
 body {
-background-color: #000;
+background-color: #151B21;
 
   .weatherAppWrap, header, .loadingWrap {
     width: 98%;
@@ -11,6 +11,10 @@ background-color: #000;
   }
 }
 
+.App {
+  min-width:500px;
+  margin: 0 auto; max-height: 1080px;
+}
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
   .weatherAppWrap, header, .loadingWrap {
