--- a/src/Components/Organisms/currentWeather/styles.scss
+++ b/src/Components/Organisms/currentWeather/styles.scss
@@ -5,7 +5,7 @@
   border: 1px solid $cyberBlue;
 
   .currentTop {
-    padding: 10px;
+    padding: 10px 10px 0px 10px;
 
     h3 {
       text-align: center;
@@ -16,7 +16,7 @@
 
   .currentBottom {
     display:grid;
-    grid-template-columns:50% 25% 25%;
+    grid-template-columns:40% 30% 30%;
     padding:10px;
 
     grid-template-areas: "currIcon currCenter currRight"
@@ -70,8 +70,11 @@
         font-weight:700;
         margin-bottom: 5px;
       }
-
+      .labelEle {
+        margin-bottom: 10px;
+      }
       .indTemp {
+        margin-bottom: 0px;
         span {
           text-transform: uppercase;
           font-weight: 700;
@@ -100,7 +103,7 @@
 @media (min-width: 768px) {
   .currentWeather {
     .currentTop {
-      padding: 10px 10px 10px 20px;
+      padding: 10px 10px 0px 20px;
 
       h3 {
         text-align: left;
@@ -121,7 +124,7 @@
       }
 
       .currentTemp, .currentCenter, .currentRight {
-        padding-top:20px;
+        padding-top:10px;
       }
 
       .currentTemp {
@@ -153,7 +156,7 @@
 @media (min-width: 992px) {
   .currentWeather {
     .currentTop {
-      padding: 10px 10px 10px 20px;
+      padding: 10px 10px 0px 20px;
 
       h3 {
         text-align: left;
@@ -162,7 +165,7 @@
     }
 
     .currentBottom {
-      grid-template-columns:20% 40% 20% 20%;
+      grid-template-columns:20% 30% 25% 25%;
       grid-template-areas: "currIcon currTemp currCenter currRight";
 
       .currentIcon {
@@ -173,7 +176,7 @@
       }
 
       .currentTemp, .currentCenter, .currentRight {
-        padding-top:20px;
+        padding-top:10px;
       }
 
       .currentTemp {
@@ -205,7 +208,7 @@
 @media (min-width: 1200px) {
   .currentWeather {
     .currentTop {
-      padding: 10px 10px 10px 20px;
+      padding: 10px 10px 0px 20px;
 
       h3 {
         text-align: left;
@@ -214,7 +217,7 @@
     }
 
     .currentBottom {
-    grid-template-columns:20% 40% 20% 20%;
+    grid-template-columns:20% 30% 25% 25%;
     grid-template-areas: "currIcon currTemp currCenter currRight";
 
       .currentIcon {
@@ -225,7 +228,7 @@
       }
 
       .currentTemp, .currentCenter, .currentRight {
-        padding-top:20px;
+        padding-top:10px;
       }
 
       .currentTemp {
